# Proxy

./: README.md  capture.pcap
HTTP_Proxy/: categorization.py  http_proxy.py
HTTP_Proxy/secure_gate_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
URL/: auth_database.db  authentication.py  categorization.py  http_proxy.py  pyproject.toml  url_database.db
proxy_output/secure_proxy/: authentication.py  database_setup.py  http_proxy.py
secure_gate_proxy/: --insecure  --location  -A  -k  authentication.py  categorization.py  cli_tool.py  http_proxy.py  multi_curl.sh  parse_curl_log.py  proxy_db.sqlite  replace_urls.py  report.json  report_generator.py
secure_gate_proxyyy/: authentication.py  categorization.py  http_proxy.py  url_database.db
