[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure_gate_proxy" 
version = "0.1"
authors = [ { name = "Thoufeeq Mohammed", email = "ThoufeeqMohammed.m@gmail.com"}]
description = "A Python-based MITM HTTP Proxy with URL filtering and authentication"
requires-python = ">=3.6"
dependencies = []

[tool.setuptools]
py-modules = ["authentication", "categorization", "http_proxy"]

[project.scripts]
secure_gate_proxy = "http_proxy:main"
